# Javidan_Individual_Project_2

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: main.yaml
data/: sqlite_db.sqlite  test.db
src/: lib.rs  main.rs
