[package]
name = "rust_main"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = "0.28"
csv = "1.1"
clap = { version = "4.1", features = ["derive"] }
libc = "^0.2"
time = "^0.1"
rand = "^0.3"
rustc-serialize = "^0.3"
rust-crypto = "^0.2"
sys-info = "0.7.0"